# games_project

./: Makefile  pyproject.toml
games_project_Harlamova/VD_games/scripts/: VD_even.py  VD_games.py  VD_main.py  brain_calc.py  brain_gcd.py  vd_prime.py  vd_progression.py
